src/objects/Mogli_SMS__GatewayToUserJunc__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_Gateway_Name__c</fullName>
        <description>This field is used by Gateway picklists in the Batch Texting Flow</description>
        <formula>Mogli_SMS__Assigned_Gateway__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Gateway Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Assigned_Gateway__c</fullName>
        <description>The Gateway to which the selected User is assigned.</description>
        <label>Assigned Gateway</label>
        <referenceTo>Mogli_SMS__Gateway__c</referenceTo>
        <relationshipName>GatewayToUserJuncs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Mogli_SMS__Assigned_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The User to be assigned to the selected Gateway.</description>
        <label>Assigned User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GatewayToUserJuncs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Gateway User</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Mogli_SMS__Assigned_Gateway__c</columns>
        <columns>Mogli_SMS__Assigned_User__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Gateway User {0000}</displayFormat>
        <label>Gateway User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gateway Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>